# ipchanger

./: .gitignore  CMakeLists.txt  README.md  paths.lua  premake5.lua
console/: CMakeLists.txt  Main.cpp
gui/: CMakeLists.txt  IPChanger-Qt_GUI.pro  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
gui/framelesswindow/: framelesswindow.cpp
gui/src/: Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
gui/src/framelesswindow/: framelesswindow.cpp
include/ipchanger/: Changer.h  Client.h  Process.h  Process_Unix.h  Process_Windows.h  Resolver.h  System.h
ipchanger/: CMakeLists.txt
ipchanger/src/: Changer.h  IPChanger.h  ippch.cpp  ippch.h  pch.h
ipchanger/src/ipchanger/: Changer.cpp  Changer.h  Process.h  Resolver.cpp  Resolver.h  System.cpp
ipchanger/src/ipchanger/platform/unix/: System_Unix.cpp
ipchanger/src/ipchanger/platform/windows/: Process_Windows.cpp  System_Windows.cpp
ipchanger/src/ipchanger/system/: Process.cpp  Process.h  Resolver.cpp  Resolver.h  System.cpp  System.h
ipchanger/src/ipchanger/system/platform/linux/: Process_Unix.h  System.Unix.cpp  UnixProcess.cpp
ipchanger/src/ipchanger/system/platform/windows/: Process_Windows.h  System.Windows.cpp  WindowsProcess.cpp
sandbox/: CMakeLists.txt  Sandbox.vcxproj
sandbox/src/: Sandbox.cpp
